# vcu

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf
boards/: nucleo_h745zi_q_m7.overlay
docs/: abbreviations.md
src/: CMakeLists.txt  main.c
src/drivers/: CMakeLists.txt  brake.c  brake.h
src/platform/: CMakeLists.txt
src/platform/host/: CMakeLists.txt  main.c
src/platform/zephyr/: CMakeLists.txt  main.c
src/shared/: CMakeLists.txt
src/vcu/: CMakeLists.txt  state_machine.c  state_machine.h
src/zephyr/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  test_state_machine.c
